src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__uint32__cast_uint32_to_float64__sqlfunc_macro.snap
---
source: src/expr/src/scalar/func/impls/uint32.rs
expression: info
---
Info {
    output_type_nullable: ColumnType {
        scalar_type: Float64,
        nullable: true,
    },
    output_type_nonnullable: ColumnType {
        scalar_type: Float64,
        nullable: false,
    },
    preserves_uniqueness: true,
    inverse: Some(
        CastFloat64ToUint32(
            CastFloat64ToUint32,
        ),
    ),
    is_monotone: true,
    propagates_nulls: true,
    introduces_nulls: false,
    could_error: false,
}
